# xion-agent-toolkit

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL-FOR-AGENTS.md  README.md  TYPES_COMPARISON.md  build.rs  dist-workspace.toml  release-please-config.json  test-auth.sh  test_create_debug.rs
.agents/: AGENTS.md
.agents/plans/: 2026-04-01-interactive-cli.md  2026-04-01-local-scope-validation.md  2026-04-03-maintenance-optimization.md  feature-roadmap.md  oauth2-client-advanced-lifecycle.md  oauth2-client-management-post-merge.md  qc-cross-review.md  skill-param-validation.md  skill-patterns-optimization.md  skills-test-framework.md  status.json  task-assignments-templates.md
.agents/plans/archived/: README.md  documentation-improvement.md  faucet-command.md  generic-contract-instantiation-api.md  generic-contract-instantiation.md  integration-tests-fix.md  oauth2-client-management-post-merge.md  release-please-automation.md  treasury-create-enhancement.md  treasury-grant-fee-debug.md  unified-ci-workflow.md
.agents/plans/knowledge/: expiration-research.md  faucet-contract-research.md  task-dependency-analysis.md
.github/workflows/: ci.yml  e2e-tests.yml  release-please.yml  release.yml  test-skills.yml
.mstar/: AGENTS.md  status.json
.mstar/iterations/: README.md
.mstar/knowledge/: README.md  faucet-contract-research.md  feature-roadmap.md  treasury-create-design.md  xion-skills-update-plan.md
.mstar/plans/archived/: 2026-04-01-interactive-cli.md  2026-04-03-maintenance-optimization.md  2026-04-03-task-assignments-templates.md  README.md  asset-builder.md  batch-operations.md  batch-treasury-operations.md  cargo-dist-release.md  cicd-integration-output.md  cli-query-export-import.md  contract-execute-command.md  documentation-update.md  e2e-testing.md  error-recovery-enhancement.md  mainnet-disable-switch.md  oauth2-client-advanced-lifecycle.md  oauth2-client-architecture.md  oauth2-client-management-post-merge.md  oauth2-pkce-implementation.md  predicted-address-computation.md  skills-integration.md  transaction-monitoring.md  treasury-api-architecture.md  treasury-automation.md  treasury-create-enhancement.md  treasury-e2e-testing.md  treasury-enhancements.md  treasury-grant-fee-config.md  unified-ci-workflow.md
.mstar/plans/reports/: README.md
docs/: ERROR-CODES.md  EXIT-CODES.md  QUICK-REFERENCE.md  cli-reference.md  configuration.md  release.md  skills-guide.md
examples/: README.md  batch-fund.json  batch-grant-config.json  batch-treasury-setup.json  contract-execute-msg.json  contract-instantiate-msg.json  contract-query-msg.json  fee-config-basic.json  fee-config-periodic.json  grant-config-contract-exec.json  grant-config-send.json  treasury-config.json  treasury-create-config.json  treasury-export-sample.json  treasury-params-update.json
plans/: asset-builder.md  batch-operations.md  contract-instantiate-refactor.md  documentation-improvement.md  documentation-update.md  e2e-testing.md  error-recovery-enhancement.md  extended-grant-types.md  feature-roadmap.md  generic-contract-instantiation-api.md  metaaccount-info.md  oauth-client-implementation.md  qc-cross-review.md  rest-api-url-fix.md  shell-completion.md  skill-param-validation.md  status.json  transaction-format-fix.md  transaction-monitoring.md  treasury-api-architecture.md  treasury-automation.md  treasury-create-design.md  treasury-create-enhancement.md  treasury-e2e-testing.md  treasury-enhancements.md  treasury-grant-fee-debug.md  unified-ci-workflow.md
plans/archived/: README.md  metaaccount-info.md
plans/knowledge/: faucet-contract-research.md
scripts/: e2e-test-grant-fee.sh  e2e-test.sh  validate-skill-frontmatter.sh
skills/scripts/: security-utils.sh
skills/xion-asset/: SKILL.md
skills/xion-asset/evals/: evals.json
skills/xion-asset/references/: asset-types.md
skills/xion-asset/schemas/: batch-mint.json  create.json  mint.json  predict.json  query.json  types.json
skills/xion-asset/scripts/: batch-mint.sh  create.sh  mint.sh  predict.sh  query.sh  types.sh
skills/xion-dev/: SKILL.md
skills/xion-dev/evals/: evals.json
skills/xion-dev/schemas/: routing.json
skills/xion-dev/scripts/: validate-params.sh
skills/xion-faucet/: SKILL.md
skills/xion-faucet/evals/: evals.json  trigger_eval.json
skills/xion-faucet/schemas/: claim.json  info.json  status.json
skills/xion-oauth2/: SKILL.md
skills/xion-oauth2-client/: SKILL.md
skills/xion-oauth2-client/schemas/: create.json  delete.json  extension-update.json  extension.json  (+7 more)
skills/xion-toolkit-init/: SKILL.md
skills/xion-treasury/: SKILL.md
src/: lib.rs  main.rs
src/account/: client.rs  mod.rs  types.rs
src/api/: mgr_api.rs  mod.rs  oauth2_api.rs
src/asset_builder/: code_ids.rs  manager.rs  mod.rs  types.rs
src/batch/: executor.rs  mod.rs  types.rs
src/cli/: account.rs  asset.rs  auth.rs  batch.rs  config.rs  contract.rs  faucet.rs  interactive.rs  interactive_fallback.rs  mod.rs  oauth2_client.rs  treasury.rs  tx.rs
src/config/: credentials.rs  encryption.rs  manager.rs  mod.rs  oauth_discovery.rs  schema.rs
src/oauth/: callback_server.rs  client.rs  mod.rs  pkce.rs  token_manager.rs
src/shared/: error.rs  exit_codes.rs  instantiate2.rs  mainnet.rs  mod.rs  retry.rs
src/treasury/: api_client.rs  cache.rs  encoding.rs  manager.rs  mod.rs  types.rs
src/tx/: client.rs  mod.rs  types.rs
src/utils/: error.rs  mod.rs  output.rs
tests/: e2e_asset.sh  e2e_batch.sh  test_create_debug.rs  treasury_create_integration_test.rs  treasury_integration_test.rs
tests/skills/: lib.sh  run_all.sh  test_skill_frontmatter.sh  test_xion_asset.sh  test_xion_oauth2.sh  test_xion_treasury.sh
(+57 files in other folders)
