[package]
name = "xion-agent-cli"
version = "0.1.0"
edition = "2021"
authors = ["Xion Developer Team"]
description = "CLI-driven, Agent-oriented toolkit for Xion blockchain development"
license = "MIT OR Apache-2.0"
repository = "https://github.com/burnt-labs/xion-agent-cli"
readme = "README.md"
keywords = ["xion", "blockchain", "cli", "agent", "oauth2"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
build = "build.rs"

[lib]
name = "xion_agent_cli"
path = "src/lib.rs"

[[bin]]
name = "xion"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env", "color", "suggestions"] }

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
directories = "5.0"
toml = "0.8"

# Credential storage (OS keyring)
keyring = "2.3"

# Crypto for PKCE
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
hex = "0.4"

# URL handling
url = "2.5"
urlencoding = "2.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Open browser
open = "5.1"

# Axum for callback server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

[build-dependencies]
# Build-time dependencies
dotenvy = "0.15"

[dev-dependencies]
# Testing
tempfile = "3.10"
mockito = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
