[package]
name = "xion-agent-toolkit"
version = "0.9.0"
edition = "2021"
authors = ["Xion Developer Team"]
description = "CLI-driven, Agent-oriented toolkit for Xion blockchain development"
license = "Apache-2.0"
repository = "https://github.com/burnt-labs/xion-agent-toolkit"
readme = "README.md"
keywords = ["xion", "blockchain", "cli", "agent", "oauth2"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
build = "build.rs"

[lib]
name = "xion_agent_toolkit"
path = "src/lib.rs"

[[bin]]
name = "xion-toolkit"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env", "color", "suggestions"] }
clap_complete = "4.5"

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"
dirs = "5.0"

# Crypto for PKCE and credential encryption
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
hex = "0.4"
aes-gcm = { version = "0.10", features = ["aes"] }
machine-uid = "0.5"

# URL handling
url = "2.5"
urlencoding = "2.1"

# Protobuf encoding
prost = "0.12"
prost-types = "0.12"

# CosmWasm types (for Binary type)
cosmwasm-std = { version = "2.1", features = ["stargate"] }

# Treasury contract types (from burnt-labs/contracts)
treasury = { git = "https://github.com/burnt-labs/contracts", branch = "main", features = ["library"] }

# Regex for parsing
regex = "1.10"

# Bech32 encoding for address conversion
bech32 = "0.11"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Open browser
open = "5.1"

# Axum for callback server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
xion-types = "0.0.0-dev.a733630f"

[build-dependencies]
# Build-time dependencies
dotenvy = "0.15"

[dev-dependencies]
# Testing
tempfile = "3.10"
wiremock = "0.6"
serial_test = "3.4.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
